# pikabit

./: .gitignore  Cargo.toml  README.md  log_config.yml
src/: bitfield.rs  client.rs  common.rs  conc.rs  concurrency.rs  constants.rs  error.rs  file.rs  http.rs  lib.rs  main.rs  metadata.rs  peer.rs  peer_protocol.rs  piece.rs  requests.rs  stats.rs  tracker_protocol.rs
src/peer_protocol/: bitfield.rs  file.rs  fops.rs  message.rs  message_handler.rs  mod.rs  msg.rs  peer.rs  piece.rs  requests.rs  shared_data.rs
src/tracker_protocol/: http.rs  metadata.rs  mod.rs  udp.rs
torrents/: FreeBSD 12.4 RELEASE Sparc64 Disc1 ISO.torrent
