[package]
name = "pikabit"
version = "0.1.0"
edition = "2021"

[lib]
name = "pikabit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
sha1 = "0.10"
urlencoding = "2.1.2"
rand = "0.8.5"
hex = "0.4.3"
serde_qs = "0.10.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
byteorder = "1.4.3"