[package]
name = "pikabit"
version = "0.1.0"
edition = "2021"

[lib]
name = "pikabit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = { version = "^1.0.0", features = ["rc"] }
serde_derive = "^1.0.0"
serde_bytes = "0.11"
sha1 = "0.10"
urlencoding = "2.1.2"
rand = "0.8.5"
hex = "0.4.3"
serde_qs = "0.10.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
byteorder = "1.4.3"
tokio = { version = "1.23.0", features = ["macros", "rt", "net", "fs"] }
log = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.5"
priority-queue  = "1.3.0"
log4rs = "1.2.0"
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.0"
